Fix alignment issue of resizable columns with footers in advanced cases

--- a/primefaces/trunk/src/main/resources/META-INF/resources/primefaces/datatable/datatable.css
+++ b/primefaces/trunk/src/main/resources/META-INF/resources/primefaces/datatable/datatable.css
@@ -28,7 +28,8 @@
 
 .ui-datatable thead th,
 .ui-datatable tbody td,
-.ui-datatable tfoot td {
+.ui-datatable tfoot td,
+.ui-datatable tfoot th{
     padding: 4px 10px;
     overflow: hidden;
     border-width: 1px;
